--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ tipos-variaveis/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
 fundamentos-desafios/.vscode/settings.json
 controle-fluxo/.vscode/settings.json
+estruturas-controle-desafios/.vscode/settings.json
