desafio controle de fluxo criado

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ sistema-smart-tv/.vscode/settings.json
 fundamentos-desafios/.vscode/settings.json
 controle-fluxo/.vscode/settings.json
 estruturas-controle-desafios/.vscode/settings.json
+controle-candidatos/.vscode/settings.json
+DesafioControleFluxo/.vscode/settings.json
