--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ controle-fluxo/.vscode/settings.json
 estruturas-controle-desafios/.vscode/settings.json
 controle-candidatos/.vscode/settings.json
 DesafioControleFluxo/.vscode/settings.json
+orientacao-objetos/exemplo-pacotes/.vscode/settings.json
