exemplo visibilidade recursos lanchonete

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ estruturas-controle-desafios/.vscode/settings.json
 controle-candidatos/.vscode/settings.json
 DesafioControleFluxo/.vscode/settings.json
 orientacao-objetos/exemplo-pacotes/.vscode/settings.json
+orientacao-objetos/visibilidade-recursos/.vscode/settings.json
