--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ controle-candidatos/.vscode/settings.json
 DesafioControleFluxo/.vscode/settings.json
 orientacao-objetos/exemplo-pacotes/.vscode/settings.json
 orientacao-objetos/visibilidade-recursos/.vscode/settings.json
+orientacao-objetos/getter-setters/.vscode/settings.json
