exemplo construtores cadastro

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ DesafioControleFluxo/.vscode/settings.json
 orientacao-objetos/exemplo-pacotes/.vscode/settings.json
 orientacao-objetos/visibilidade-recursos/.vscode/settings.json
 orientacao-objetos/getter-setters/.vscode/settings.json
+orientacao-objetos/construtores/.vscode/settings.json
