exemplo enums estados brasileiros

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ orientacao-objetos/exemplo-pacotes/.vscode/settings.json
 orientacao-objetos/visibilidade-recursos/.vscode/settings.json
 orientacao-objetos/getter-setters/.vscode/settings.json
 orientacao-objetos/construtores/.vscode/settings.json
+orientacao-objetos/enums/.vscode/settings.json
