--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ orientacao-objetos/visibilidade-recursos/.vscode/settings.json
 orientacao-objetos/getter-setters/.vscode/settings.json
 orientacao-objetos/construtores/.vscode/settings.json
 orientacao-objetos/enums/.vscode/settings.json
+orientacao-objetos/mensagens/.vscode/settings.json
+orientacao-objetos/pilares/.vscode/settings.json
