--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ orientacao-objetos/construtores/.vscode/settings.json
 orientacao-objetos/enums/.vscode/settings.json
 orientacao-objetos/mensagens/.vscode/settings.json
 orientacao-objetos/pilares/.vscode/settings.json
+orientacao-objetos/interface-exemplo/.vscode/settings.json
