pratica pilares orientacao objetos

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ orientacao-objetos/enums/.vscode/settings.json
 orientacao-objetos/mensagens/.vscode/settings.json
 orientacao-objetos/pilares/.vscode/settings.json
 orientacao-objetos/interface-exemplo/.vscode/settings.json
+orientacao-objetos/pratica-pilares/.vscode/settings.json
