--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ orientacao-objetos/mensagens/.vscode/settings.json
 orientacao-objetos/pilares/.vscode/settings.json
 orientacao-objetos/interface-exemplo/.vscode/settings.json
 orientacao-objetos/pratica-pilares/.vscode/settings.json
+gerenciamento-colaboradores/.vscode/settings.json
