--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ orientacao-objetos/pilares/.vscode/settings.json
 orientacao-objetos/interface-exemplo/.vscode/settings.json
 orientacao-objetos/pratica-pilares/.vscode/settings.json
 gerenciamento-colaboradores/.vscode/settings.json
+orientacao-objetos/gerenciamento-colaboradores/.vscode/settings.json
